--- a/2.3 - Lab: Introduction to Python.ipynb
+++ b/2.3 - Lab: Introduction to Python.ipynb
@@ -1393,10 +1393,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## 2.3.5 Sequences and Slice Notation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
